--- a/src/App/App.sass
+++ b/src/App/App.sass
@@ -4,6 +4,7 @@
 	border: 0
 	transition: .7s ease-in-out
 	box-sizing: border-box
+	font-family: Inter
 *:before *:after
 	-moz-box-sizing: border-box
 	-webkit-box-sizing: border-box
@@ -18,9 +19,9 @@ html,body
 	font-size: 100%
 	line-height: 1
 	font-size: 14px
-	font-family: 'Raleway', sans-serif
+	font-family: Inter
 	margin: 0 auto
-	background-color: #E5E5E5
+	background-color: rgba(230,246,255, 1 )
 	outline: none
 	scroll-behavior: smooth
 input::-ms-clear
@@ -28,15 +29,11 @@ input::-ms-clear
 input
 	&::-webkit-input-placeholder
 		color: grey
-		padding: 10px
 		text-overflow: ellipsis
 	&::-moz-placeholder
-		color: grey
-		padding: 10px
 		text-overflow: ellipsis
 	&:-ms-input-placeholder
 		color: grey
-		padding: 10px
 		text-overflow: ellipsis
 	&::-webkit-inner-spin-button
 		-webkit-appearance: none
@@ -44,11 +41,14 @@ input
 		-webkit-appearance: none
 	&[type='number']
 		-moz-appearance: textfield
+input:active, input:focus
+	outline: none !important
 button:active, button:focus
 	outline: none !important
 button::-moz-focus-inner
 	border: 0 !important
 button
+	background-color: transparent
 	cursor: pointer
 button::-moz-focus-inner
 	padding: 0
@@ -66,5 +66,6 @@ ul li
 	max-width: 1080px
 	width: 100%
 	height: 100%
-	margin: 0 auto
+	margin: 85px auto 0
+	position: relative
 
