--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -4,8 +4,10 @@
   background: #FFFFFF;
   -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
           box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
-  -webkit-border-radius: 20px;
-          border-radius: 20px;
+  -webkit-border-top-left-radius: 20px;
+          border-top-left-radius: 20px;
+  -webkit-border-top-right-radius: 20px;
+          border-top-right-radius: 20px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
