--- a/src/Header/Header.sass
+++ b/src/Header/Header.sass
@@ -3,7 +3,8 @@
 	height: 120px
 	background: #FFFFFF
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04)
-	border-radius: 20px
+	border-top-left-radius: 20px
+	border-top-right-radius: 20px
 	display: flex
 	align-items: center
 	justify-content: space-between
