--- a/src/components/Cards/CardItem/CardItem.sass
+++ b/src/components/Cards/CardItem/CardItem.sass
@@ -1,6 +1,5 @@
 .card-item
 	width: 220px
-	// height: 260px
 	background: #FFFFFF
 	border: 1px solid #F3F3F3
 	box-sizing: border-box
@@ -9,6 +8,10 @@
 	font-style: normal
 	padding: 33px
 	margin: 10px
+	transition: box-shadow .2s ease-in-out transform .2s ease-in-out
+	&:hover
+		box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.3)
+		transform: translateY(-5px)
 	&__img
 		margin-bottom: 15px
 	&__title
@@ -18,6 +21,7 @@
 		line-height: 17px
 		color: #000000
 		margin-bottom: 15px
+		cursor: default
 	&__price
 		font-family: Inter
 		font-weight: 500
@@ -28,9 +32,19 @@
 		display: flex
 		align-items: center
 		margin-bottom: 2px
+		cursor: default
 	&__cost
 		font-family: Inter
 		font-weight: bold
 		font-size: 14px
 		line-height: 17px
 		opacity: 1
+		cursor: default
+	&__block
+		display: flex
+		align-items: center
+		justify-content: space-between
+	&__button
+		img
+			width: 100%
+			height: 100%
