--- a/src/components/Cards/CardItem/CardItem.css
+++ b/src/components/Cards/CardItem/CardItem.css
@@ -25,6 +25,10 @@
           transform: translateY(-5px);
 }
 
+.card-item__favorite {
+  cursor: pointer;
+}
+
 .card-item__img {
   margin-bottom: 15px;
 }
@@ -82,7 +86,6 @@
           justify-content: space-between;
 }
 
-.card-item__button img {
-  width: 100%;
-  height: 100%;
+.card-item__button {
+  cursor: pointer;
 }
