--- a/src/components/Cards/CardItem/CardItem.sass
+++ b/src/components/Cards/CardItem/CardItem.sass
@@ -12,6 +12,8 @@
 	&:hover
 		box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.3)
 		transform: translateY(-5px)
+	&__favorite
+		cursor: pointer
 	&__img
 		margin-bottom: 15px
 	&__title
@@ -45,6 +47,4 @@
 		align-items: center
 		justify-content: space-between
 	&__button
-		img
-			width: 100%
-			height: 100%
+		cursor: pointer
